objects/BMCServiceDesk__BMC_Software__c.object
<CustomObject>
    <description>BMC_Software: CMDB Abstract class that defines software elements for a particular platform.   By definition, abstract classes cannot hold any instances. You use them only in special cases to organize subclasses so that you have the flexibility to add a layer of organization without a database join. Therefore, you might use subclasses (such as BMC_Patch, BMC_Product, and BMC_SystemSoftware) to represent particular types of software elements in your IT environment.  This class corresponds to the DMTF class CIM_SoftwareElement.</description>
    <fields>
        <fullName>BMCServiceDesk__BuildNumber__c</fullName>
        <label>Build Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BuildType__c</fullName>
        <label>Build Type</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConfigurationBasicNumber__c</fullName>
        <label>Configuration Basic Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ContractID__c</fullName>
        <label>Contract ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstallLocation__c</fullName>
        <label>Install Location</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LicenseType__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LicensesAvailable__c</fullName>
        <label>Licenses Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PatchNumber__c</fullName>
        <label>Patch Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ServicePack__c</fullName>
        <label>Service Pack</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>Software</label>
    <nameField>
        <label>BMC_Software Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Software</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>